kubernetes/fleetspeak-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetspeak-admin
  namespace: grr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetspeak-admin
  template:
    metadata:
      labels:
        app: fleetspeak-admin
    spec:
      containers:
        - name: fleetspeak-admin
          image: parthacharya21/fleetspeak:v5
          command: [ "server", "-components_config", "/configs/server/textservices/admin.components.config", "-services_config", "/configs/server/grr_frontend.service", "-alsologtostderr", "-v", "1000" ]
          ports:
            - containerPort: 4444
---
apiVersion: v1
kind: Service
metadata:
  name: fleetspeak-admin
  namespace: grr
spec:
  type: ClusterIP
  selector:
    app: fleetspeak-admin
  ports:
    - protocol: TCP
      port: 4444
      targetPort: 4444
