kubernetes/fleetspeak-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetspeak-frontend
  namespace: grr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleetspeak-frontend
  template:
    metadata:
      labels:
        app: fleetspeak-frontend
    spec:
      containers:
        - name: fleetspeak-frontend
          image: parthacharya21/fleetspeak:v5
          command: [ "server", "-components_config", "/configs/server/textservices/frontend.components.config", "-services_config", "/configs/server/grr_frontend.service", "-alsologtostderr", "-v", "1000" ]
          ports:
            - containerPort: 4443
            - containerPort: 10000
---
apiVersion: v1
kind: Service
metadata:
  name: fleetspeak-frontend
  namespace: grr
spec:
  type: ClusterIP
  selector:
    app: fleetspeak-frontend
  ports:
    - protocol: TCP
      port: 4443
      name: a
      targetPort: 4443
    - protocol: TCP
      port: 10000
      name: b
      targetPort: 10000
