kubernetes/grr-fleetspeak-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grr-fleetspeak-frontend
  namespace: grr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grr-fleetspeak-frontend
  template:
    metadata:
      labels:
        app: grr-fleetspeak-frontend
    spec:
      containers:
        - name: grr-fleetspeak-frontend
          image: parthacharya21/grr:v4
          args: ["-component", "frontend", "-config", "/configs/server/grr.server.yaml", "--verbose"]
          ports:
            - containerPort: 11111
---
apiVersion: v1
kind: Service
metadata:
  name: grr-fleetspeak-frontend
  namespace: grr
spec:
  type: ClusterIP
  selector:
    app: grr-fleetspeak-frontend
  ports:
    - protocol: TCP
      port: 11111
      targetPort: 11111
