kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grr-ingress
  namespace: grr
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grr.cybersecuritylabs.cloud
      secretName: grr-cybersecuritylabs-cloud-tls
  rules:
    - host: grr.cybersecuritylabs.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grr-admin-ui
                port:
                  number: 8000
